# football-ical

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.server  Taskfile.yaml  compose.yml  farm.config.ts  init.sql  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/actions/test/: action.yml
.github/workflows/: automerge.yml  build-and-push.yml  claude.yml
.sqlx/: query-1eb1069f07221e34f1ca16dbaea10903f3f6ce9b74f2ba93f83ebcb2bdd17e1b.json  query-4d90b8f4049073980ebb403538d485a87eaf72b24c475913e22681d32f2e6bc9.json  query-7ed99fd42f79ed3265e3d850ec2f0dd1f0a6b4b0447831c51bbf3d6e860f2722.json  query-a9090e5ef6a59a83879bf886d876c6fcf8f3960be0229add04351d28fc4e015f.json
page/: index.html  main.tsx
page/utils/: fetcher.ts
src/: lib.rs  models.rs
src/handlers/: team.rs
src/models/: event.rs  team.rs
src/services/: crawler.rs
src/services/fixtures/: 1.html  2.html  3.html
tests/: e2e.test.ts
