[package]
name = "football-ical"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
anyhow = "1.0.98"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.72.0"
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
scraper = "0.23.1"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.19"
